--- a/css/global.css
+++ b/css/global.css
@@ -25,3 +25,20 @@ body{
     height: 150px;
     background-color:rgb(225, 225, 225);
 }
+
+.people_img{
+    height: 150px;
+    width: 150px;
+    margin: 5px;
+    border-radius: 40px;
+}
+.introduce{
+    margin: 10px;
+}
+.introduce span{
+    margin-left: 30px;
+    display:inline-block;
+    font-family: '黑体';
+    font-size: large;
+    font-weight: bold;
+}
