--- a/css/global.css
+++ b/css/global.css
@@ -42,3 +42,10 @@ body{
     font-size: large;
     font-weight: bold;
 }
+
+.under_tool{
+    width: auto;
+    height: 200px;
+    background-color:rgb(25, 25, 25);
+    margin-top: 350px;
+}
