--- a/css/global.css
+++ b/css/global.css
@@ -49,3 +49,11 @@ body{
     background-color:rgb(25, 25, 25);
     margin-top: 350px;
 }
+
+.author{
+    padding: 40px;
+}
+
+.author h2{
+    color: rgb(50, 50, 50);
+}
