--- a/css/global.css
+++ b/css/global.css
@@ -1,16 +1,20 @@
+/* 背景颜色 */
 body{
     background-color: rgb(235, 235, 235);
 }
 
+/* 欢迎字体 */
 .welcome{
     text-align: center;
 }
 
+/* 顶部工具栏(整体) */
 #tool{
     width: auto;
     height: 75px;
 }
 
+/* 顶部工具栏(个体) */
 .tool{ 
     text-decoration: none;
     color: black;
@@ -19,6 +23,7 @@ body{
     float: right;
 }
 
+/* 八班"伟人"(整体背景) */
 .great_people{
     margin: 0 40px;
     width: auto;
@@ -26,15 +31,20 @@ body{
     background-color:rgb(225, 225, 225);
 }
 
+/* 八班"伟人"头像(以后会有) */
 .people_img{
     height: 150px;
     width: 150px;
     margin: 5px;
     border-radius: 40px;
 }
+
+/* (整体) */
 .introduce{
     margin: 10px;
 }
+
+/* 八班"伟人"(个体) */
 .introduce span{
     margin-left: 30px;
     display:inline-block;
@@ -43,6 +53,7 @@ body{
     font-weight: bold;
 }
 
+/* 底部工具栏 */
 .under_tool{
     width: auto;
     height: 200px;
@@ -50,10 +61,12 @@ body{
     margin-top: 350px;
 }
 
+/* 作者自述(整体) */
 .author{
     padding: 40px;
 }
 
+/* 作者自述 */
 .author h2{
     color: rgb(50, 50, 50);
 }
